--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
 Cython==0.29.20
 future==0.18.2
+idna==2.10
 joblib==0.15.1
 kiwisolver==1.2.0
 matplotlib==3.3.0rc1
@@ -12,7 +15,11 @@ pycocotools==2.0
 pyparsing==3.0.0a1
 python-dateutil==2.8.1
 regex==2020.6.8
+requests==2.24.0
+sentencepiece==0.1.91
 six==1.15.0
 torch==1.5.1+cu101
+torchtext==0.6.0
 torchvision==0.6.1+cu101
 tqdm==4.46.1
+urllib3==1.25.9
